# ChangeLog for dev-util/cmake
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cmake/ChangeLog,v 1.173 2011/10/29 21:49:29 dilfridge Exp $

*cmake-2.8.6-r2 (29 Oct 2011)

  29 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -cmake-2.8.6-r1.ebuild, +cmake-2.8.6-r2.ebuild,
  +files/cmake-2.8.6-FindLAPACK-2.patch:
  Fix FindLAPACK, bug 388757

  19 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org> cmake-2.8.6-r1.ebuild:
  Fix java 7 sandbox violation, bug 387227

*cmake-2.8.6-r1 (15 Oct 2011)

  15 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +cmake-2.8.6-r1.ebuild, +files/cmake-2.8.6-FindBLAS.patch,
  +files/cmake-2.8.6-FindLAPACK.patch:
  Version bump (thanks johu!)

*cmake-2.8.5-r2 (18 Jul 2011)

  18 Jul 2011; Andreas K. Huettel <dilfridge@gentoo.org> cmake-2.8.4-r1.ebuild,
  cmake-2.8.5.ebuild, +cmake-2.8.5-r2.ebuild,
  +files/cmake-2.8.5-FindBLAS.patch, +files/cmake-2.8.5-FindLAPACK.patch:
  Patch FindBLAS and FindLAPACK to try PkgConfig first and skip all other tests
  if that succeeds; prepare for additional eclass feature of automated cmake
  module removal in $S, which should NOT happen in the cmake ebuild itself.

*cmake-2.8.5 (11 Jul 2011)

  11 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org> +cmake-2.8.5.ebuild:
  Version bump to 2.8.5. Recompiled everything using cmake and all tests pass.
  Fixes bug #374665. Tests needs to state some deps like cvs/git/...

  08 May 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/cmake-2.6.0-interix.patch, -files/cmake-2.6.4-FindBoost.patch,
  -files/cmake-2.8.0-darwin-no-app-with-qt.patch, -cmake-2.8.1-r2.ebuild,
  -files/cmake-2.8.1-FindBoost.patch,
  -files/cmake-2.8.1-more-no_host_paths.patch, -files/cmake-2.8.1-mpi.patch,
  -files/cmake-2.8.3-FindLibArchive.patch,
  -files/cmake-2.8.3-FindPythonInterp.patch,
  -files/cmake-2.8.3-FindPythonLibs.patch,
  -files/cmake-2.8.3-buffer_overflow.patch, -files/cmake-FindJNI.patch,