@@ -21,28 +21,25 @@ AUX cmake-2.8.6-FindLAPACK-2.patch 1158 RMD160 2fb17c71e08e930ed9a71f59a4316c357
 AUX cmake-2.8.6-FindLAPACK.patch 1150 RMD160 6f18fcb48dfa7ee92bd440198fcb2bc3822d3ad5 SHA1 9f9f92d7657025968ebfe74f5983c8b0ced94721 SHA256 033e3b0a217e0168b47588f01f2e4b216f0ade5dd0297264e8dc3f672a979caf
 AUX cmake.vim 217 RMD160 3ac23077646d31e9c29ff32ae2eba20b63c07809 SHA1 527b989aec74eb260c16f93baf189c2e6794b3d8 SHA256 7366c1d45bdcc93efb1954216a5427a5f9df7e98a1f706c357576d7835aaebc5
 DIST cmake-2.8.4.tar.gz 5477628 RMD160 8b92eb11391b07433e7fe02bbb80c3ebcaaf1893 SHA1 6c42699bd63fdfcc7743d4906e3208d051d7f19b SHA256 d97ea9f807f5407030d4f7246accc26addc520c9ee3897c4582eba3da49253cc
-DIST cmake-2.8.5.tar.gz 5517977 RMD160 e4767dc0ea3e53da3ab14cc6af5d42dd190eda76 SHA1 8dd4c31cbccf1a297829a476a0ef79d1614ca368 SHA256 5e18bff75f01656c64f553412a8905527e1b85efaf3163c6fb81ea5aaced0b91
 DIST cmake-2.8.6.tar.gz 5583905 RMD160 c3095a4776367496f895b8075fda373568f01878 SHA1 7c2cbd42d27e26580cd4923892197b84b2a90675 SHA256 e6999b81ac367d85ffb0f69b6c4a0ef96f95dc154efd3592f9cfebacdf75728e
 EBUILD cmake-2.8.4-r1.ebuild 4510 RMD160 64efe5aa8c2b68908940ccf922d4754fc1a40d09 SHA1 0ef8f21873968242807661aa4ebb5617bb8e063b SHA256 b4aa824de85f7e74e6ec2c062d1ded1261fad04f3de7fbd0295faf32a6ebda5a
-EBUILD cmake-2.8.5-r2.ebuild 4662 RMD160 d0c60d71df4e4ac7b68e5a67e6218945ee2a30e1 SHA1 5f6fde7c9106ccf12c6c317d4ea58c408e979395 SHA256 72a80ae698d517fa66e4ad72e0e32b825be3f265d7666c29324c89613dceea99
-EBUILD cmake-2.8.5.ebuild 4553 RMD160 be92e42ac98a4cf72296e17cb5d3f3a6cdf4ee6f SHA1 9566c96f2a274250e5fb2ef92b69070e3e136c08 SHA256 85110a3edcd14ab4cd92558cc23932e9345aa15e2551733446b1633bbdab2f4f
 EBUILD cmake-2.8.6-r2.ebuild 4727 RMD160 5c1b8e10376ce352f23c7e94e813007c5c6584f8 SHA1 3c50dc691446383f2f6f32e78c686918217f50c6 SHA256 67e1a2746ccbfb7becfa50f41c80d1d94fb12ef1ef900531490e92f2c995d825
-MISC ChangeLog 27725 RMD160 5971483cc98ce33139a082b581ae02e13c92134b SHA1 6e03e037f8a5542f9653a48ee59b7be0b755b0e4 SHA256 6df1da965870964f6eaeb75f48e36a3dbb9244f6a9ee09d5b59278cabd9ca89b
+MISC ChangeLog 27843 RMD160 db7f5e75fcd612666484078d3a42ba44aae3ee63 SHA1 b5f2f6763ccee566f473b45d52379b6e672ab800 SHA256 cdce4c8f9ff98d65e08d483f92f3ae41aec1cece6e852cbc2163f97eb1bdda44
 MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJOrHT2AAoJENwGBM22xffe3J4P/0JMy4ie86hfJ6nfJP7OQgda
-SxZSZ9LTV7wvB/xOKfSlfHE8OSIRmmjNrTSJzVBOVUuHoW3AcjkDV0524fuXQ0IV
-Ulxnfl3IQ2rD/Uk6XnXJnLvNl+l8ubPnu/r79NE6NQVRf7QgyW3C4reQ0KfL3aOc
-4GCa7Z7TukmWBWEo5GE1J2lJOT7RhzNOrLwyr+8+zBzmUkxBpfo1HxSzh/yEo66C
-STNq4f3IJKyUY9CSZBRveiiu1WUJj8LLp1jLrINKwpOscvyultO0GwA2+OD3CSki
-vSoJWljfuVIiDjHci8iqoMbFvzpMZbbwkMn8yHHY0B/wSR1sFqGSvlxaOWrNks4o
-sll+m+Gs5vh+NtaqTdlnMg4z0K/7wvObTVpFO/fG6gDPkYddj1HWb/Gl7oNj5VAl
-6BSqygSo1zDZUSdt1Y6uYvKzxSSE4pLBroWLI/LpvnhD/i7fuNb6sPXIiWIDo/ng
-CEV+hldOwiKd0/35jKYDSQ3U2RMVPSyCPwIxZMyLYeJsDxyhAIyJkla23M31h0/D
-qlY4f/T7fMpD12etOrBgNlxtwkLokVkfyx/Czyt6jwH+eqvuac3jhpqgg0vaKgae
-ByrorfZEGHHj1WaZDTGu467XY4PW/8e0ruOMowpp0yHxuE3Muo9YSz88HWsHq5/9
-UBZXV2ZeQJkFuyEMTuis
-=wmP2
+iQIcBAEBCgAGBQJOrSQaAAoJEEb+UGWnxTyHZJ8P/AkFX40Sn/ZcAMRZaSTuTe+1
+tGxx1usK4PiTav7FekIKlUPucvgHTiLfdQGq+WxoQZpLoXU16Zeq817v4y+N26c0
+aT75+vZ2pWIlJa/fYE2s26jxhS8c0XW+4qnuwtangp3wC9d4Q2/sl5jwOCcRhRXP
+gKunsj7RhdUxs5RP3JuQUfUoypi1NRt9TKU4t87G3ZPIssfAoX0n0H/LotfDVzZV
+kDffEgluZdNXe5O8s+1WAIw01CmGwoba+zpbGJOE9zQqALACOEgKXBGCs0JxJc83
+UaU6zYr4QyV2r4rLGB6AkrQd/x5GFuO5AeLxJ5n/BMURE+IadXOctlzwBmQ4wgcN
+WSOXuutaH5+sLOTZoLn35wBzw2ZVAvkn3HBAy1lMTV26gQGL753WDF9tYytpNoof
+iqxDTKfR01BYLS7xsUZyocRZq2f1QpfNmYvFaEJWiMa4MJmzxT0T3vRUdYSQMN/l
+Oq8Hwfk1xI0cZK4ZcH6/PRftvlXJQiz47bqw6w6OP+zjL2FKm5QcF8iK0rgMqllj
+u4DJ/wc6U945DYWqwOepnyK0KA1SaGV9m3h5jqCXfLCk1ZU9UN2VScE002QQBrhS
+Fh2U1fi05I2KszSlOMkQOgiF8k8W+gvOSwQxLz3Wtz8JyylOUDaxcP33TKgBf8kA
+O+a+3AYEYtI+XBKoQuIK
+=wzIk
 -----END PGP SIGNATURE-----
